<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <LinearLayout
        style="@style/tv_header"
        android:layout_height="60dp"
        android:layout_width="match_parent"
        android:orientation="horizontal">

        <View
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_weight="0.17" />

        <ImageButton
            android:id="@+id/btn_download"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:src="@drawable/ic_download"
            android:scaleType="centerCrop"
            android:importantForAccessibility="no" />

        <View
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_weight="0.13" />

        <!-- Temporarily removing picklist upload button -->
        <!--        <ImageButton-->
        <!--                android:id="@+id/btn_upload"-->
        <!--                android:layout_width="50dp"-->
        <!--                android:layout_height="50dp"-->
        <!--                android:src="@drawable/ic_upload"-->
        <!--                android:scaleType="centerCrop"-->
        <!--                android:importantForAccessibility="no"-->
        <!--        />-->

        <View
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_weight="0.17" />

        <Button
            android:id="@+id/btn_switch_online"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:text="@string/title_online"
            android:textSize="14sp"
            android:layout_weight="1.075"
            tools:ignore="SmallSp"
            android:backgroundTint="@color/LightGray" />

        <Button
            android:id="@+id/btn_switch_offline"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:text="@string/title_offline"
            android:layout_weight="1.075"
            android:textSize="14sp"
            android:backgroundTint="@color/ToggleColor" />

        <View
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_weight="0.1" />

    </LinearLayout>

    <View style="@style/view_separator_horizontal" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginVertical="@dimen/very_small"
        android:orientation="horizontal">

        <Button
            android:id="@+id/btn_team_number"
            style="@style/tv_live_picklist_header"
            android:layout_marginHorizontal="7dp"
            android:text="@string/team_number"
            android:maxLines="2"
            android:autoSizeTextType="uniform"
            android:autoSizeMaxTextSize="18sp" />

        <TextView
            android:id="@+id/tv_local_rank_header"
            style="@style/tv_live_picklist_header"
            android:layout_marginHorizontal="7dp"
            android:text="@string/local_rank"
            android:maxLines="2"
            android:autoSizeTextType="uniform"
            android:autoSizeMaxTextSize="18sp" />

        <TextView
            android:id="@+id/tv_imported_rank_header"
            style="@style/tv_live_picklist_header"
            android:layout_marginHorizontal="7dp"
            android:text="@string/imported_rank"
            android:maxLines="2"
            android:autoSizeTextType="uniform"
            android:autoSizeMaxTextSize="18sp" />

    </LinearLayout>

    <View style="@style/view_separator_horizontal" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rv_offline_picklist"
        android:layout_width="match_parent"
        android:layout_height="match_parent" />

</LinearLayout>
